--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ nav a {
 }
 
 nav a:hover {
-    background-color: var(--primary-color);
+    background-color: #5468cc;
 }
 
 /* Section Styling */
@@ -119,7 +119,7 @@ tr:nth-child(even) {
 }
 
 tr:hover {
-    background-color: var(--primary-color);
+    background-color: #5468cc;
 }
 
 /* Countdown */
