--- a/styles.css
+++ b/styles.css
@@ -372,13 +372,13 @@ select {
 #leaderboard-table td:nth-child(6) {
     width: 70px; /* Sedikit lebih lebar untuk angka skor */
     text-align: right; /* Skor biasanya diratakan kanan */
-    min-width: 70px; 
+    max-width: 70px; 
 }
 
 /* Kolom Nama Tim (Kolom ke-1) akan secara otomatis mengambil semua sisa lebar yang tersedia */
 #leaderboard-table th:nth-child(1),
 #leaderboard-table td:nth-child(1) {
     width: 70px; /* Sedikit lebih lebar untuk angka skor */
-    text-align: right; /* Skor biasanya diratakan kanan */
+    text-align: left; /* Skor biasanya diratakan kanan */
     min-width: 70px; ; 
 }
